Fixed Upload Modal and aligned File Table

--- a/css/home.css
+++ b/css/home.css
@@ -99,6 +99,14 @@ a:link {
     margin: auto;
 }
 
+#file-table {
+    display: flex;
+    justify-content: center;
+
+    overflow-y: auto;
+    overflow-x: auto;
+}
+
 /* ------------------------------------------------------------------------------------------------------------*/
 #closeButton {
     position: absolute;
@@ -158,15 +166,17 @@ th:hover {
     overflow: auto;
     background-color: rgba(0, 0, 0, 0.4);
 }
+
+/* Possibly make this a grid instead???? */
 .fileUpload {
     background-color: white;
     border-radius: 5px;
     margin: 5% auto;
     padding: 20px;
     border: 1px solid #888;
-    height: 30%;
+    height: auto;
     width: 30%;
-    padding-bottom: 0;
+    padding-bottom: 10px;
 }
 #upload {
     display: flex;
@@ -177,7 +187,7 @@ th:hover {
     background-color: white;
     border: 3px dashed rgba(20, 20, 20, 0.2);
     width: 100%;
-    height: 70%;
+    height: 23vh;
 }
 #uploadForm {
     display: none;
@@ -206,14 +216,13 @@ th:hover {
     background-color: rgb(221, 221, 221);
 }
 #uploadControl {
-    display: flex;
-    justify-content: flex-end;
-    margin-top: 20px;
+    padding-top: 17px;
+    padding-bottom: 6px;
+    text-align: right;
 }
 #confirmUpload {
     font-size: 17px;
     border-radius: 5px;
-    margin-right: 10px;
     background-color: rgb(91, 161, 242);
     padding: 5px 20px;
     color: white;
